✨feat: hlpairs.nvim

--- a/articles/7e12d9684cd2af.md
+++ b/articles/7e12d9684cd2af.md
@@ -4,6 +4,7 @@ emoji: "🌟"
 type: "tech"
 topics:
   - "vim"
+  - "neovim"
 published: true
 published_at: "2023-03-31 13:30"
 ---
@@ -12,7 +13,10 @@ published_at: "2023-03-31 13:30"
 
 ![動作イメージ](https://user-images.githubusercontent.com/6848636/225357852-5eca2053-ee41-41a3-9d57-d6bd249b29cc.gif)
 
-https://github.com/utubo/vim-hlpairs                                                                                       
+https://github.com/utubo/vim-hlpairs
+2024/11/28 追記
+NeoVim版も作りました
+https://github.com/utubo/hlpairs.nvim
 標準プラグインのmatchparenが重いのでvim9scriptで書き直していたと思ったら
 遥かに重いプラグインを書いていた…
 
