✨feat: hlpairs.nvim

--- a/articles/7e12d9684cd2af.md
+++ b/articles/7e12d9684cd2af.md
@@ -24,7 +24,7 @@ https://github.com/utubo/hlpairs.nvim
 VSCodeなんかだと標準の動作ですね
 画像の通り、HTMLやXMLのタグにも対応しています。
 
-vim9script製なのでneovimの方はごめんなさい
+~~vim9script製なのでneovimの方はごめんなさい~~
 
 ## インストール
 README.mdに書いてありますが一応…
