✨feat: hlpairs.nvim

--- a/articles/7e12d9684cd2af.md
+++ b/articles/7e12d9684cd2af.md
@@ -1,5 +1,5 @@
 ---
-title: "vim9scriptで括弧をハイライトするプラグイン"
+title: "VimとNeovimで括弧をハイライトするプラグイン"
 emoji: "🌟"
 type: "tech"
 topics:
@@ -15,7 +15,7 @@ published_at: "2023-03-31 13:30"
 
 https://github.com/utubo/vim-hlpairs
 2024/11/28 追記
-NeoVim版も作りました
+Neovim版も作りました
 https://github.com/utubo/hlpairs.nvim
 標準プラグインのmatchparenが重いのでvim9scriptで書き直していたと思ったら
 遥かに重いプラグインを書いていた…
