🐞fix: 'Vim9 script'の綴り見直し

--- a/articles/01788284d5e21b.md
+++ b/articles/01788284d5e21b.md
@@ -40,7 +40,7 @@ https://github.com/utubo/vim-minviml
 
 :::message
 - バグが沢山あるはずなので運用するのはおすすめできません
-- vim9scriptで書いているのでnvimでは動きません
+- Vim9 scriptで書いているのでnvimでは動きません
 :::
 
 # 実際に測定してみた
@@ -54,7 +54,7 @@ https://github.com/utubo/vim-minviml
 - [.vimrc.src.vim (元)](https://github.com/utubo/dotfiles/blob/master/.vimrc.src.vim)
 - [.vimrc (Minify後)](https://github.com/utubo/dotfiles/blob/master/.vimrc)
 
-vim9scriptですがまぁ今までのvimscriptでも大差ないだろうなって結果なのでご勘弁を…
+Vim9 scriptですがまぁ今までのVim scriptでも大差ないだろうなって結果なのでご勘弁を…
 `1008 lines (932 sloc) 31.5 KB` → `752 lines (752 sloc) 20.7 KB`
 だいたい3/4にMinifyされています
  
