--- a/articles/1c49706ff749c8.md
+++ b/articles/1c49706ff749c8.md
@@ -1,5 +1,5 @@
 ---
-title: "vim9scriptで書いた.vimrcのテストをvim9scriptで書いてGithub Actionsでpush時に実行するようにした話"
+title: "Vim9 scriptで書いた.vimrcのテストをVim9 scriptで書いてGithub Actionsでpush時に実行するようにした話"
 emoji: "✅"
 type: "tech"
 topics:
@@ -9,9 +9,9 @@ published_at: "2023-03-31 14:42"
 ---
 
 ## 初めに
-vim9scriptで書いた.vimrcのテストをvim9scriptで書いてGithub ActionsでPush時にテストするようにしてみました
+Vim9 scriptで書いた.vimrcのテストをVim9 scriptで書いてGithub ActionsでPush時にテストするようにしてみました
 
-もともとvim標準のassertを使って「vim9scriptで書いた.vimrcのテストをvim9scriptで書いて」はやっていたのですが
+もともとvim標準のassertを使って「Vim9 scriptで書いた.vimrcのテストをVim9 scriptで書いて」はやっていたのですが
 某読書会で「自動でテストしないの？」「vim-themis良いよー」と教えていただいたのでやってみました
 この場をかりて読書会の皆様に感謝を🙏
 
@@ -62,7 +62,7 @@ suite.Bar = () => {
 ## Github Actionに登録する
 [こちら](https://qiita.com/stackline/items/6a7fa64d2291171cb3c2)を参考に作成します
 
-ただしデフォルトでインストールされるvimは古いのでvim9scriptが動きません
+ただしデフォルトでインストールされるvimは古いのでVim9 scriptが動きません
 `sudo add-apt-repository ppa:jonathonf/vim`で取得先を変更するようにしました([参考](https://dev.to/kaede_io/vim-ubunt-no-vim-wo-81-kara-90-nishang-geru-38o5))
 
 
@@ -185,7 +185,7 @@ Simple Workflowの設定も最後だけ直しておきます
 テストが通ったのでヨシ！
 
 ## 終わりに
-後半はともかく、前半はvim9script + vim-themis + Github Actionsの参考になれば嬉しいです
+後半はともかく、前半はVim9 script + vim-themis + Github Actionsの参考になれば嬉しいです
 全ソースはこちらにあります
 https://github.com/utubo/dotfiles
 
