--- a/articles/508ed595ce228c.md
+++ b/articles/508ed595ce228c.md
@@ -141,7 +141,7 @@ gvimだととにかくチラついて大変でした。
 これは、以前`cmdheight=0`を使って[自動でcmdlineを隠したり表示したりするようにした経験](https://zenn.dev/utubo/articles/20d359c6bb6163)を生かして`&updatetime`の時間だけ再描画を待つようにしました。
 
 ### `%{expr}`の展開
-基本vim9scriptでつくりましたが、`%{expr}`の展開はlegacyで行っています。
+基本Vim9 scriptでつくりましたが、`%{expr}`の展開はlegacyで行っています。
 例えばstatuslineなら、
 ```vim
 vim9script
@@ -151,7 +151,7 @@ def Foo(): stirng
 enddef
 set statusline=%{Bar()}
 ```
-のようにかけますが、vim9script内でexecute()`で`bar`展開すると、
+のようにかけますが、Vim9 script内でexecute()`で`bar`展開すると、
 スクリプトローカルな`Bar()`を探してしまいエラーになってしまいます。
 ここは`%{g:Bar()}`と書かなければなりません。
 冗長ですしstatuslineと違うと混乱もするのでlegacyで展開するようにしました。
