--- a/articles/7e12d9684cd2af.md
+++ b/articles/7e12d9684cd2af.md
@@ -17,14 +17,14 @@ https://github.com/utubo/vim-hlpairs
 2024/11/28 追記
 Neovim版も作りました
 https://github.com/utubo/hlpairs.nvim
-標準プラグインのmatchparenが重いのでvim9scriptで書き直していたと思ったら
+標準プラグインのmatchparenが重いのでVim9 scriptで書き直していたと思ったら
 遥かに重いプラグインを書いていた…
 
 括弧の上だけではなく括弧の内側にいてもハイライトしてくれるプラグインです
 VSCodeなんかだと標準の動作ですね
 画像の通り、HTMLやXMLのタグにも対応しています。
 
-~~vim9script製なのでneovimの方はごめんなさい~~
+~~Vim9 script製なのでneovimの方はごめんなさい~~
 
 ## インストール
 README.mdに書いてありますが一応…
