🐞fix: title70文字制限！

--- a/articles/1c49706ff749c8.md
+++ b/articles/1c49706ff749c8.md
@@ -1,5 +1,5 @@
 ---
-title: "Vim9 scriptで書いた.vimrcのテストをVim9 scriptで書いてGithub Actionsでpush時に実行するようにした話"
+title: "Vim9 scriptで書いた.vimrcのテストをVim9 scriptで書いてGithub Actionsでpush時に実行させた話"
 emoji: "✅"
 type: "tech"
 topics:
